--- a/api/package.json
+++ b/api/package.json
@@ -1,23 +1,10 @@
 {
-  "name": "",
+  "name": "pathflow-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/src/functions/*.js",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
-  },
+  "private": true,
+  "license": "UNLICENSED",
+  "engines": { "node": ">=18 <20" },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
-  },
-  "devDependencies": {
-    "azure-functions-core-tools": "^4.x",
-    "@types/node": "18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "@azure/storage-blob": "12.14.0"
   }
 }
