swa(cors): add headers + OPTIONS 204 for /api/* from localhost:4200

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,5 +1,23 @@
 {
   "routes": [
-    { "route": "/api/*", "allowedRoles": ["anonymous"] }
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"],
+      "headers": {
+        "Access-Control-Allow-Origin": "http://localhost:4200",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    },
+    {
+      "route": "/api/*",
+      "methods": ["OPTIONS"],
+      "statusCode": 204,
+      "headers": {
+        "Access-Control-Allow-Origin": "http://localhost:4200",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    }
   ]
 }
