--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,14 +1,10 @@
 {
   "routes": [
-    {
-      "route": "/api/*",
-      "methods": ["OPTIONS"],
-      "statusCode": 204,
-      "headers": {
-        "Access-Control-Allow-Origin": "http://localhost:4200",
-        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type"
-      }
-    }
-  ]
+    { "route": "/api/*", "allowedRoles": ["anonymous"] }
+  ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/api/*", "/assets/*"]
+  }
 }
+
